[tool.poetry]
name = "web-module-04"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "web_module_04"}]

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.0"
logging = "^0.4.9.6"
pathlib = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
